fixes spacing issue

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -403,7 +403,7 @@ video {
 }
 
 .mixes_description {
-  margin-top: 30px;
+  /* margin-top: 10px; */
 }
 
 .mixes_arrow_container {
